--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
-    "@rsbuild/core": "1.0.0-alpha.6",
-    "@rsbuild/plugin-react": "1.0.0-alpha.6",
+    "@rsbuild/core": "^1.0.0-alpha.8",
+    "@rsbuild/plugin-react": "^1.0.0-alpha.8",
     "@tanstack/router-plugin": "^1.44.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
