--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "rsbuild build",
+    "build": "rsbuild build --env-mode production",
     "check": "biome check --write",
     "dev": "rsbuild dev --open",
     "prod": "rsbuild dev --env-mode production --open",
@@ -18,10 +18,10 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@rainbow-me/rainbowkit": "^2.1.3",
     "@supabase/supabase-js": "^2.44.3",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-router": "^1.44.2",
+    "@web3modal/wagmi": "^5.0.6",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.3.2",
     "i18next": "^23.11.5",
@@ -37,9 +37,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
-    "@rsbuild/core": "^1.0.0-alpha.8",
-    "@rsbuild/plugin-react": "^1.0.0-alpha.8",
+    "@rsbuild/core": "^1.0.0-alpha.9",
+    "@rsbuild/plugin-react": "^1.0.0-alpha.9",
     "@tanstack/router-plugin": "^1.44.2",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.4",
