--- a/.github/workflows/firebase-hosting-dev.yml
+++ b/.github/workflows/firebase-hosting-dev.yml
@@ -11,9 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
       - run: bun install
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          BUN_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - run: bun run build --env-mode development
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
