--- a/.github/workflows/firebase-hosting-dev.yml
+++ b/.github/workflows/firebase-hosting-dev.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
         with:
+          registry-url: "https://npm.pkg.github.com"
+          scope: '@betfinio'
           bun-version: latest
       - run: bun install
         env:
