--- a/.github/workflows/firebase-hosting-dev.yml
+++ b/.github/workflows/firebase-hosting-dev.yml
@@ -8,6 +8,28 @@ name: Deploy to Firebase Hosting App Development
       - dev
 env:
   PUBLIC_WALLETCONNECT_ID: ${{ vars.PUBLIC_WALLETCONNECT_ID }}
+  PUBLIC_ALCHEMY_ID: ${{ vars.PUBLIC_ALCHEMY_ID }}
+  PUBLIC_RPC_URL1: ${{ vars.PUBLIC_RPC_URL1 }}
+  PUBLIC_RPC_URL2: ${{ vars.PUBLIC_RPC_URL2 }}
+  PUBLIC_RPC_URL3: ${{ vars.PUBLIC_RPC_URL3 }}
+  PUBLIC_ETHSCAN: ${{ vars.PUBLIC_ETHSCAN }}
+  PUBLIC_SUPABASE_URL: ${{ vars.PUBLIC_SUPABASE_URL }}
+  PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.PUBLIC_SUPABASE_ANON_KEY }}
+  PUBLIC_TOKEN_ADDRESS: ${{ vars.PUBLIC_TOKEN_ADDRESS }}
+  PUBLIC_CONSERVATIVE_STAKING_ADDRESS: ${{ vars.PUBLIC_CONSERVATIVE_STAKING_ADDRESS }}
+  PUBLIC_PASS_ADDRESS: ${{ vars.PUBLIC_PASS_ADDRESS }}
+  PUBLIC_AFFILIATE_ADDRESS: ${{ vars.PUBLIC_AFFILIATE_ADDRESS }}
+  PUBLIC_BTCUSDT_FEED_ADDRESS: ${{ vars.PUBLIC_BTCUSDT_FEED_ADDRESS }}
+  PUBLIC_BTCUSDT_GAME_ADDRESS: ${{ vars.PUBLIC_BTCUSDT_GAME_ADDRESS }}
+  PUBLIC_CORE_ADDRESS: ${{ vars.PUBLIC_CORE_ADDRESS }}
+  PUBLIC_PARTNER_ADDRESS: ${{ vars.PUBLIC_PARTNER_ADDRESS }}
+  PUBLIC_BETS_MEMORY_ADDRESS: ${{ vars.PUBLIC_BETS_MEMORY_ADDRESS }}
+  PUBLIC_DYNAMIC_STAKING_ADDRESS: ${{ vars.PUBLIC_DYNAMIC_STAKING_ADDRESS }}
+  PUBLIC_PREDICT_ADDRESS: ${{ vars.PUBLIC_PREDICT_ADDRESS }}
+  PUBLIC_ROULETTE_ADDRESS: ${{ vars.PUBLIC_ROULETTE_ADDRESS }}
+  PUBLIC_AFFILIATE_FUND_ADDRESS: ${{ vars.PUBLIC_AFFILIATE_FUND_ADDRESS }}
+  PUBLIC_MULTIMINT_ADDRESS: ${{ vars.PUBLIC_MULTIMINT_ADDRESS }}
+  PUBLIC_METADATA_ADDRESS: ${{ vars.PUBLIC_METADATA_ADDRESS }}
 
 jobs:
   build_and_deploy:
