added more variables and copied to production deployment

--- a/.github/workflows/firebase-hosting-dev.yml
+++ b/.github/workflows/firebase-hosting-dev.yml
@@ -30,6 +30,7 @@ env:
   PUBLIC_AFFILIATE_FUND_ADDRESS: ${{ vars.PUBLIC_AFFILIATE_FUND_ADDRESS }}
   PUBLIC_MULTIMINT_ADDRESS: ${{ vars.PUBLIC_MULTIMINT_ADDRESS }}
   PUBLIC_METADATA_ADDRESS: ${{ vars.PUBLIC_METADATA_ADDRESS }}
+  PUBLIC_ENVIRONMENT: ${{ vars.PUBLIC_ENVIRONMENT }}
 
 jobs:
   build_and_deploy:
