added cors to firebase.json on dev

--- a/firebase.json
+++ b/firebase.json
@@ -18,6 +18,17 @@
     {
       "public": "dist",
       "target": "app-dev",
+      "headers": [
+        {
+          "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css|js|ts|jsx|tsx)",
+          "headers": [
+            {
+              "key": "Access-Control-Allow-Origin",
+              "value": "*"
+            }
+          ]
+        }
+      ],
       "ignore": [
         "firebase.json",
         "**/.*",
