--- a/firebase.json
+++ b/firebase.json
@@ -20,7 +20,7 @@
       "target": "app-dev",
       "headers": [
         {
-          "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css|js|ts|jsx|tsx)",
+          "source": "**/*",
           "headers": [
             {
               "key": "Access-Control-Allow-Origin",
