added cors to prod

--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,17 @@
     {
       "public": "dist",
       "target": "app",
+      "headers": [
+        {
+          "source": "**/*",
+          "headers": [
+            {
+              "key": "Access-Control-Allow-Origin",
+              "value": "*"
+            }
+          ]
+        }
+      ],
       "ignore": [
         "firebase.json",
         "**/.*",
