--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
-    "@betfinio/abi": "^1.2.0",
-    "@betfinio/hooks": "^1.4.1",
+    "@betfinio/abi": "^1.3.1",
     "@betfinio/ui": "^1.6.1",
     "@module-federation/enhanced": "^0.2.6",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -37,8 +36,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
-    "@rsbuild/core": "^1.0.0-alpha.9",
-    "@rsbuild/plugin-react": "^1.0.0-alpha.9",
+    "@rsbuild/core": "^1.0.1-beta.0",
+    "@rsbuild/plugin-react": "^1.0.1-beta.0",
     "@tanstack/router-plugin": "^1.44.2",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
