--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.44.3",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-router": "^1.44.2",
@@ -36,8 +37,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
-    "@rsbuild/core": "^1.0.1-beta.0",
-    "@rsbuild/plugin-react": "^1.0.1-beta.0",
+    "@rsbuild/core": "^1.0.1-beta.1",
+    "@rsbuild/plugin-react": "^1.0.1-beta.1",
+    "@rsbuild/plugin-sass": "^1.0.1-beta.1",
     "@tanstack/router-plugin": "^1.44.2",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
