--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.44.3",
     "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-router": "^1.44.2",
+    "@tanstack/react-table": "^8.19.3",
     "@web3modal/wagmi": "^5.0.6",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.3.2",
