--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "check": "biome check --write",
     "dev": "rsbuild dev --open",
     "prod": "rsbuild dev --env-mode production --open",
+    "local": "rsbuild dev --env-mode localhost --open",
     "format": "biome format --write",
     "preview": "rsbuild preview"
   },
