--- a/firebase.json
+++ b/firebase.json
@@ -28,6 +28,32 @@
     },
     {
       "public": "dist",
+      "target": "app-ua",
+      "headers": [
+        {
+          "source": "**/*",
+          "headers": [
+            {
+              "key": "Access-Control-Allow-Origin",
+              "value": "*"
+            }
+          ]
+        }
+      ],
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
+      "public": "dist",
       "target": "app-dev",
       "headers": [
         {
