--- a/.github/workflows/firebase-hosting-ua.yml
+++ b/.github/workflows/firebase-hosting-ua.yml
@@ -9,9 +9,9 @@ name: Deploy to Firebase Hosting App Production UA
 env:
   PUBLIC_WALLETCONNECT_ID: ${{ vars.PUBLIC_WALLETCONNECT_ID }}
   PUBLIC_ALCHEMY_ID: ${{ vars.PUBLIC_ALCHEMY_ID }}
-  PUBLIC_RPC_URL1: ${{ vars.PUBLIC_RPC_URL1 }}
-  PUBLIC_RPC_URL2: ${{ vars.PUBLIC_RPC_URL2 }}
-  PUBLIC_RPC_URL3: ${{ vars.PUBLIC_RPC_URL3 }}
+  PUBLIC_RPC_URL1: ${{ vars.PUBLIC_RPC_URL1_UA }}
+  PUBLIC_RPC_URL2: ${{ vars.PUBLIC_RPC_URL2_UA }}
+  PUBLIC_RPC_URL3: ${{ vars.PUBLIC_RPC_URL3_UA }}
   PUBLIC_ETHSCAN: ${{ vars.PUBLIC_ETHSCAN }}
   PUBLIC_SUPABASE_URL: ${{ vars.PUBLIC_SUPABASE_URL }}
   PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.PUBLIC_SUPABASE_ANON_KEY }}
@@ -22,19 +22,18 @@ env:
   PUBLIC_BTCUSDT_FEED_ADDRESS: ${{ vars.PUBLIC_BTCUSDT_FEED_ADDRESS }}
   PUBLIC_BTCUSDT_GAME_ADDRESS: ${{ vars.PUBLIC_BTCUSDT_GAME_ADDRESS }}
   PUBLIC_CORE_ADDRESS: ${{ vars.PUBLIC_CORE_ADDRESS }}
-  PUBLIC_PARTNER_ADDRESS: ${{ vars.PUBLIC_PARTNER_ADDRESS }}
+  PUBLIC_PARTNER_ADDRESS: ${{ vars.PUBLIC_PARTNER_UA_ADDRESS }}
   PUBLIC_BETS_MEMORY_ADDRESS: ${{ vars.PUBLIC_BETS_MEMORY_ADDRESS }}
   PUBLIC_DYNAMIC_STAKING_ADDRESS: ${{ vars.PUBLIC_DYNAMIC_STAKING_ADDRESS }}
   PUBLIC_PREDICT_ADDRESS: ${{ vars.PUBLIC_PREDICT_ADDRESS }}
   PUBLIC_ROULETTE_ADDRESS: ${{ vars.PUBLIC_ROULETTE_ADDRESS }}
   PUBLIC_AFFILIATE_FUND_ADDRESS: ${{ vars.PUBLIC_AFFILIATE_FUND_ADDRESS }}
   PUBLIC_MULTIMINT_ADDRESS: ${{ vars.PUBLIC_MULTIMINT_ADDRESS }}
-  PUBLIC_METADATA_ADDRESS: ${{ vars.PUBLIC_METADATA_ADDRESS }}
   PUBLIC_ENVIRONMENT: ${{ vars.PUBLIC_ENVIRONMENT }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment: production-ua
+    environment: production
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
