--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "framer-motion": "^11.3.19",
     "i18next": "^23.12.2",
     "lucide-react": "^0.417.0",
+    "luxon": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.0",
     "react-ts-tradingview-widgets": "^1.2.5",
     "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
     "viem": "^2.18.6",
@@ -54,10 +56,10 @@
     "@rsbuild/plugin-react": "^1.0.1-beta.8",
     "@rsbuild/plugin-sass": "^1.0.1-beta.8",
     "@tanstack/router-plugin": "^1.45.13",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
 }
