--- a/.github/workflows/firebase-hosting-ua.yml
+++ b/.github/workflows/firebase-hosting-ua.yml
@@ -31,6 +31,10 @@ env:
   PUBLIC_MULTIMINT_ADDRESS: ${{ vars.PUBLIC_MULTIMINT_ADDRESS }}
   PUBLIC_METADATA_ADDRESS: ${{ vars.PUBLIC_METADATA_ADDRESS }}
   PUBLIC_ENVIRONMENT: ${{ vars.PUBLIC_ENVIRONMENT }}
+  PUBLIC_APP_URL: ${{ vars.PUBLIC_APP_URL }}
+  PUBLIC_STAKING_URL: ${{ vars.PUBLIC_STAKING_URL }}
+  PUBLIC_AFFILIATE_URL: ${{ vars.PUBLIC_AFFILIATE_URL }}
+  PUBLIC_GAMES_URL: ${{ vars.PUBLIC_GAMES_URL }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
