--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@betfinio/abi": "^1.3.1",
     "@betfinio/ui": "^1.6.1",
     "@module-federation/enhanced": "^0.3.3",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
