added partner address to env

--- a/.github/workflows/firebase-hosting-prod.yml
+++ b/.github/workflows/firebase-hosting-prod.yml
@@ -17,6 +17,7 @@ env:
   PUBLIC_TOKEN_ADDRESS: ${{ vars.PUBLIC_TOKEN_ADDRESS }}
   PUBLIC_CONSERVATIVE_STAKING_ADDRESS: ${{ vars.PUBLIC_CONSERVATIVE_STAKING_ADDRESS }}
   PUBLIC_PASS_ADDRESS: ${{ vars.PUBLIC_PASS_ADDRESS }}
+  PUBLIC_PARTNER_ADDRESS: ${{ vars.PUBLIC_PARTNER_ADDRESS }}
   PUBLIC_CORE_ADDRESS: ${{ vars.PUBLIC_CORE_ADDRESS }}
   PUBLIC_BETS_MEMORY_ADDRESS: ${{ vars.PUBLIC_BETS_MEMORY_ADDRESS }}
   PUBLIC_DYNAMIC_STAKING_ADDRESS: ${{ vars.PUBLIC_DYNAMIC_STAKING_ADDRESS }}
