--- a/.github/workflows/firebase-hosting-ua.yml
+++ b/.github/workflows/firebase-hosting-ua.yml
@@ -19,6 +19,7 @@ env:
   PUBLIC_PASS_ADDRESS: ${{ vars.PUBLIC_PASS_ADDRESS }}
   PUBLIC_CORE_ADDRESS: ${{ vars.PUBLIC_CORE_ADDRESS }}
   PUBLIC_BETS_MEMORY_ADDRESS: ${{ vars.PUBLIC_BETS_MEMORY_ADDRESS }}
+  PUBLIC_PARTNER_ADDRESS: ${{ vars.PUBLIC_PARTNER_ADDRESS }}
   PUBLIC_DYNAMIC_STAKING_ADDRESS: ${{ vars.PUBLIC_DYNAMIC_STAKING_ADDRESS }}
   PUBLIC_PREDICT_ADDRESS: ${{ vars.PUBLIC_PREDICT_ADDRESS }}
   PUBLIC_ENVIRONMENT: ${{ vars.PUBLIC_ENVIRONMENT }}
