--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"cmdk": "^1.0.0",
 		"framer-motion": "^11.3.19",
 		"i18next": "^23.12.2",
+		"lefthook": "^1.7.12",
 		"lucide-react": "^0.417.0",
 		"luxon": "^3.4.4",
 		"react": "^18.3.1",
