--- a/.github/workflows/firebase-hosting-ua.yml
+++ b/.github/workflows/firebase-hosting-ua.yml
@@ -11,6 +11,7 @@ env:
   PUBLIC_RPC_URL1: ${{ vars.PUBLIC_RPC_URL1 }}
   PUBLIC_RPC_URL2: ${{ vars.PUBLIC_RPC_URL2 }}
   PUBLIC_RPC_URL3: ${{ vars.PUBLIC_RPC_URL3 }}
+  PUBLIC_ARCHIVE_RPC_URL: ${{ vars.PUBLIC_ARCHIVE_RPC_URL }}
   PUBLIC_ETHSCAN: ${{ vars.PUBLIC_ETHSCAN }}
   PUBLIC_SUPABASE_URL: ${{ vars.PUBLIC_SUPABASE_URL }}
   PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.PUBLIC_SUPABASE_ANON_KEY }}
