changed deployment file

--- a/.github/workflows/firebase-hosting-dev.yml
+++ b/.github/workflows/firebase-hosting-dev.yml
@@ -24,6 +24,7 @@ env:
   PUBLIC_BETS_MEMORY_ADDRESS: ${{ vars.PUBLIC_BETS_MEMORY_ADDRESS }}
   PUBLIC_DYNAMIC_STAKING_ADDRESS: ${{ vars.PUBLIC_DYNAMIC_STAKING_ADDRESS }}
   PUBLIC_PREDICT_ADDRESS: ${{ vars.PUBLIC_PREDICT_ADDRESS }}
+  PUBLIC_ROULETTE_ADDRESS: ${{ vars.PUBLIC_ROULETTE_ADDRESS }}
   PUBLIC_ENVIRONMENT: ${{ vars.PUBLIC_ENVIRONMENT }}
   PUBLIC_APP_URL: ${{ vars.PUBLIC_APP_URL }}
   PUBLIC_STAKING_URL: ${{ vars.PUBLIC_STAKING_URL }}
