--- a/.github/workflows/firebase-hosting-prod.yml
+++ b/.github/workflows/firebase-hosting-prod.yml
@@ -22,6 +22,7 @@ env:
   PUBLIC_PARTNER_ADDRESS: ${{ vars.PUBLIC_PARTNER_ADDRESS }}
   PUBLIC_CORE_ADDRESS: ${{ vars.PUBLIC_CORE_ADDRESS }}
   PUBLIC_BETS_MEMORY_ADDRESS: ${{ vars.PUBLIC_BETS_MEMORY_ADDRESS }}
+  PUBLIC_ROULETTE_ADDRESS: ${{ vars.PUBLIC_ROULETTE_ADDRESS }}
   PUBLIC_DYNAMIC_STAKING_ADDRESS: ${{ vars.PUBLIC_DYNAMIC_STAKING_ADDRESS }}
   PUBLIC_PREDICT_ADDRESS: ${{ vars.PUBLIC_PREDICT_ADDRESS }}
   PUBLIC_ENVIRONMENT: ${{ vars.PUBLIC_ENVIRONMENT }}
