--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"dependencies": {
 		"@betfinio/abi": "^1.0.4",
 		"@betfinio/ui": "^1.0.2",
-		"@module-federation/enhanced": "^0.3.3",
+		"@module-federation/enhanced": "^0.3.5",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-dialog": "^1.1.1",
@@ -29,39 +29,49 @@
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
-		"@supabase/supabase-js": "^2.45.0",
-		"@tanstack/react-query": "^5.51.16",
-		"@tanstack/react-router": "^1.48.1",
-		"@tanstack/react-table": "^8.19.3",
+		"@supabase/supabase-js": "^2.45.1",
+		"@tanstack/react-query": "^5.51.24",
+		"@tanstack/react-router": "^1.48.4",
+		"@tanstack/react-table": "^8.20.1",
 		"@web3modal/wagmi": "4.1.11",
 		"class-variance-authority": "^0.7.0",
 		"cmdk": "^1.0.0",
-		"framer-motion": "^11.3.19",
-		"i18next": "^23.12.2",
-		"lefthook": "^1.7.12",
+		"framer-motion": "^11.3.28",
+		"i18next": "^23.14.0",
+		"lefthook": "^1.7.14",
 		"lucide-react": "^0.417.0",
-		"luxon": "^3.4.4",
+		"luxon": "^3.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-i18next": "^15.0.0",
+		"react-i18next": "^15.0.1",
 		"react-ts-tradingview-widgets": "^1.2.5",
-		"tailwind-merge": "^2.4.0",
-		"tailwindcss": "^3.4.7",
+		"tailwind-merge": "^2.5.2",
+		"tailwindcss": "^3.4.10",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^0.9.1",
-		"viem": "^2.18.6",
-		"wagmi": "^2.12.2"
+		"viem": "^2.19.8",
+		"wagmi": "^2.12.6"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.3",
-		"@rsbuild/core": "^1.0.1-beta.11",
-		"@rsbuild/plugin-react": "^1.0.1-beta.11",
-		"@rsbuild/plugin-sass": "^1.0.1-beta.11",
-		"@tanstack/router-plugin": "^1.45.13",
+		"@rsbuild/core": "^1.0.1-beta.15",
+		"@rsbuild/plugin-react": "^1.0.1-beta.15",
+		"@rsbuild/plugin-sass": "^1.0.1-beta.15",
+		"@tanstack/router-plugin": "^1.48.5",
 		"@types/luxon": "^3.4.2",
-		"@types/node": "^20.14.10",
+		"@types/node": "^20.16.1",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"typescript": "^5.5.4"
+	},
+	"resolutions": {
+		"@walletconnect/core": "2.14.0",
+		"@walletconnect/types": "2.14.0",
+		"@walletconnect/utils": "2.14.0"
+	},
+	"overrides": {
+		"@walletconnect/core": "2.14.0",
+		"@walletconnect/types": "2.14.0",
+		"@walletconnect/utils": "2.14.0"
 	}
 }
