--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@supabase/supabase-js": "^2.45.2",
-		"@tanstack/react-query": "^5.52.2",
-		"@tanstack/react-router": "^1.51.0",
+		"@tanstack/react-query": "^5.53.1",
+		"@tanstack/react-router": "^1.51.6",
 		"@tanstack/react-table": "^8.20.5",
 		"@web3modal/wagmi": "4.1.11",
 		"class-variance-authority": "^0.7.0",
 		"cmdk": "^1.0.0",
-		"framer-motion": "^11.3.30",
+		"framer-motion": "^11.3.31",
 		"i18next": "^23.14.0",
 		"lefthook": "^1.7.14",
 		"lucide-react": "^0.417.0",
@@ -51,18 +51,18 @@
 		"tailwindcss": "^3.4.10",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^0.9.1",
-		"viem": "^2.20.1",
+		"viem": "^2.21.0",
 		"wagmi": "^2.12.7"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.3",
-		"@rsbuild/core": "^1.0.1-beta.16",
-		"@rsbuild/plugin-react": "^1.0.1-beta.16",
-		"@rsbuild/plugin-sass": "^1.0.1-beta.16",
-		"@tanstack/router-plugin": "^1.51.0",
+		"@rsbuild/core": "^1.0.1-rc.0",
+		"@rsbuild/plugin-react": "^1.0.1-rc.0",
+		"@rsbuild/plugin-sass": "^1.0.1-rc.0",
+		"@tanstack/router-plugin": "^1.51.6",
 		"@types/luxon": "^3.4.2",
-		"@types/node": "^20.16.1",
-		"@types/react": "^18.3.4",
+		"@types/node": "^20.16.2",
+		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
 		"typescript": "^5.5.4"
 	}
