--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"preview": "rsbuild preview"
 	},
 	"dependencies": {
-		"@betfinio/abi": "^1.0.4",
+		"@betfinio/abi": "^1.0.5",
 		"@betfinio/ui": "^1.0.2",
 		"@module-federation/enhanced": "^0.3.5",
 		"@radix-ui/react-accordion": "^1.2.0",
@@ -31,17 +31,17 @@
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
-		"@supabase/supabase-js": "^2.45.2",
-		"@tanstack/react-query": "^5.53.1",
-		"@tanstack/react-router": "^1.51.6",
+		"@supabase/supabase-js": "^2.45.4",
+		"@tanstack/react-query": "^5.55.4",
+		"@tanstack/react-router": "^1.57.9",
 		"@tanstack/react-table": "^8.20.5",
 		"@web3modal/wagmi": "4.1.11",
 		"class-variance-authority": "^0.7.0",
 		"cmdk": "^1.0.0",
 		"embla-carousel-react": "^8.2.1",
-		"framer-motion": "^11.3.31",
-		"i18next": "^23.14.0",
-		"lefthook": "^1.7.14",
+		"framer-motion": "^11.5.4",
+		"i18next": "^23.15.1",
+		"lefthook": "^1.7.15",
 		"lucide-react": "^0.417.0",
 		"luxon": "^3.5.0",
 		"react": "^18.3.1",
@@ -51,20 +51,20 @@
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "^3.4.10",
 		"tailwindcss-animate": "^1.0.7",
-		"vaul": "^0.9.1",
-		"viem": "^2.21.0",
-		"wagmi": "^2.12.7"
+		"vaul": "^0.9.2",
+		"viem": "^2.21.5",
+		"wagmi": "^2.12.10"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.3",
-		"@rsbuild/core": "^1.0.1-rc.0",
-		"@rsbuild/plugin-react": "^1.0.1-rc.0",
-		"@rsbuild/plugin-sass": "^1.0.1-rc.0",
-		"@tanstack/router-plugin": "^1.51.6",
+		"@rsbuild/core": "^1.0.2",
+		"@rsbuild/plugin-react": "^1.0.1",
+		"@rsbuild/plugin-sass": "^1.0.1",
+		"@tanstack/router-plugin": "^1.57.9",
 		"@types/luxon": "^3.4.2",
-		"@types/node": "^20.16.2",
+		"@types/node": "^20.16.5",
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
-		"typescript": "^5.5.4"
+		"typescript": "^5.6.2"
 	}
 }
