--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@web3modal/wagmi": "4.1.11",
 		"class-variance-authority": "^0.7.0",
 		"cmdk": "^1.0.0",
+		"consola": "^3.2.3",
 		"embla-carousel-react": "^8.2.1",
 		"framer-motion": "^11.5.4",
 		"i18next": "^23.15.1",
