--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 		"enabled": true,
 		"rules": {
 			"suspicious": {
-				"noArrayIndexKey": "off"
+				"noArrayIndexKey": "off",
+				"noExplicitAny": "off"
 			},
 			"a11y": {
 				"useKeyWithClickEvents": "off"
