--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"scripts": {
 		"build": "rsbuild build",
-		"check": "biome check --write",
+		"check": "biome check",
 		"dev": "rsbuild dev --open",
 		"prod": "rsbuild dev --env-mode production --open",
 		"local": "rsbuild dev --env-mode localhost --open",
@@ -13,7 +13,7 @@
 	},
 	"dependencies": {
 		"@betfinio/abi": "^1.0.5",
-		"@betfinio/ui": "^1.0.2",
+		"@betfinio/ui": "^1.0.4",
 		"@module-federation/enhanced": "^0.3.5",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
@@ -32,14 +32,14 @@
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@supabase/supabase-js": "^2.45.4",
-		"@tanstack/react-query": "^5.56.1",
-		"@tanstack/react-router": "^1.57.10",
+		"@tanstack/react-query": "^5.56.2",
+		"@tanstack/react-router": "^1.57.15",
 		"@tanstack/react-table": "^8.20.5",
 		"@web3modal/wagmi": "4.1.11",
 		"class-variance-authority": "^0.7.0",
 		"cmdk": "^1.0.0",
 		"consola": "^3.2.3",
-		"embla-carousel-react": "^8.2.1",
+		"embla-carousel-react": "^8.3.0",
 		"framer-motion": "^11.5.4",
 		"i18next": "^23.15.1",
 		"lefthook": "^1.7.15",
@@ -47,24 +47,24 @@
 		"luxon": "^3.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-i18next": "^15.0.1",
+		"react-i18next": "^15.0.2",
 		"react-ts-tradingview-widgets": "^1.2.5",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "^3.4.11",
 		"tailwindcss-animate": "^1.0.7",
-		"vaul": "^0.9.2",
-		"viem": "^2.21.6",
+		"vaul": "^0.9.3",
+		"viem": "^2.21.7",
 		"wagmi": "^2.12.11"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.0",
-		"@rsbuild/core": "^1.0.2",
-		"@rsbuild/plugin-react": "^1.0.1",
+		"@biomejs/biome": "^1.9.1",
+		"@rsbuild/core": "^1.0.4",
+		"@rsbuild/plugin-react": "^1.0.2",
 		"@rsbuild/plugin-sass": "^1.0.1",
-		"@tanstack/router-plugin": "^1.57.9",
+		"@tanstack/router-plugin": "^1.57.15",
 		"@types/luxon": "^3.4.2",
 		"@types/node": "^20.16.5",
-		"@types/react": "^18.3.5",
+		"@types/react": "^18.3.6",
 		"@types/react-dom": "^18.3.0",
 		"typescript": "^5.6.2"
 	}
