--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
 	"private": true,
 	"version": "0.0.0",
 	"scripts": {
+		"prebuild": "graphclient build",
 		"build": "rsbuild build",
 		"check": "biome check",
-		"dev": "rsbuild dev --open",
-		"prod": "rsbuild dev --env-mode production --open",
-		"local": "rsbuild dev --env-mode localhost --open",
+		"dev": "bun run build:schema:dev && rsbuild dev --open",
+		"prod": "bun run build:schema:prod && rsbuild dev --env-mode production --open",
+		"local": "bun run build:schema:dev && rsbuild dev --env-mode localhost --open",
 		"format": "biome format --write",
-		"preview": "rsbuild preview"
+		"preview": "rsbuild preview",
+		"build:schema:dev": "dotenv -e .env.development.local -- graphclient build",
+		"build:schema:prod": "dotenv -e .env.production.local -- graphclient build"
 	},
 	"dependencies": {
-		"@betfinio/abi": "^1.0.5",
-		"@betfinio/ui": "^1.0.4",
+		"@betfinio/abi": "^1.0.8",
+		"@betfinio/ui": "^1.0.6",
 		"@module-federation/enhanced": "^0.3.5",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-checkbox": "^1.1.1",
@@ -33,7 +36,7 @@
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@supabase/supabase-js": "^2.45.4",
 		"@tanstack/react-query": "^5.56.2",
-		"@tanstack/react-router": "^1.57.15",
+		"@tanstack/react-router": "^1.57.18",
 		"@tanstack/react-table": "^8.20.5",
 		"@web3modal/wagmi": "4.1.11",
 		"class-variance-authority": "^0.7.0",
@@ -41,6 +44,7 @@
 		"consola": "^3.2.3",
 		"embla-carousel-react": "^8.3.0",
 		"framer-motion": "^11.5.4",
+		"graphql": "^16.9.0",
 		"i18next": "^23.15.1",
 		"lefthook": "^1.7.15",
 		"lucide-react": "^0.417.0",
@@ -50,22 +54,24 @@
 		"react-i18next": "^15.0.2",
 		"react-ts-tradingview-widgets": "^1.2.5",
 		"tailwind-merge": "^2.5.2",
-		"tailwindcss": "^3.4.11",
+		"tailwindcss": "^3.4.12",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^0.9.3",
-		"viem": "^2.21.7",
-		"wagmi": "^2.12.11"
+		"viem": "^2.21.9",
+		"wagmi": "^2.12.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.1",
+		"@graphprotocol/client-cli": "^3.0.7",
 		"@rsbuild/core": "^1.0.4",
 		"@rsbuild/plugin-react": "^1.0.2",
 		"@rsbuild/plugin-sass": "^1.0.1",
 		"@tanstack/router-plugin": "^1.57.15",
 		"@types/luxon": "^3.4.2",
 		"@types/node": "^20.16.5",
-		"@types/react": "^18.3.6",
+		"@types/react": "^18.3.7",
 		"@types/react-dom": "^18.3.0",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.2",
+		"dotenv-cli": "^7.4.2"
 	}
 }
