--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 		"check": "biome check",
 		"dev": "bun run build:schema:dev && rsbuild dev --open",
 		"prod": "bun run build:schema:prod && rsbuild dev --env-mode production --open",
-		"local": "bun run build:schema:dev && rsbuild dev --env-mode localhost --open",
+		"local": "bun run build:schema:local && rsbuild dev --env-mode localhost --open",
 		"format": "biome format --write",
 		"preview": "rsbuild preview",
+		"build:schema:local": "dotenv -e .env.localhost.local -- graphclient build",
 		"build:schema:dev": "dotenv -e .env.development.local -- graphclient build",
 		"build:schema:prod": "dotenv -e .env.production.local -- graphclient build"
 	},
@@ -64,14 +65,14 @@
 		"@biomejs/biome": "^1.9.1",
 		"@graphprotocol/client-cli": "^3.0.7",
 		"@rsbuild/core": "^1.0.4",
+		"@rsbuild/plugin-node-polyfill": "^1.0.4",
 		"@rsbuild/plugin-react": "^1.0.2",
 		"@rsbuild/plugin-sass": "^1.0.1",
 		"@tanstack/router-plugin": "^1.57.15",
 		"@types/luxon": "^3.4.2",
-		"@types/node": "^20.16.5",
 		"@types/react": "^18.3.7",
 		"@types/react-dom": "^18.3.0",
-		"typescript": "^5.6.2",
-		"dotenv-cli": "^7.4.2"
+		"dotenv-cli": "^7.4.2",
+		"typescript": "^5.6.2"
 	}
 }
