--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.1",
 		"@graphprotocol/client-cli": "^3.0.7",
-		"@rsbuild/core": "^1.0.4",
-		"@rsbuild/plugin-node-polyfill": "^1.0.4",
+		"@rsbuild/core": "1.0.4",
+		"@rsbuild/plugin-node-polyfill": "1.0.4",
 		"@rsbuild/plugin-react": "^1.0.2",
 		"@rsbuild/plugin-sass": "^1.0.1",
 		"@tanstack/router-plugin": "^1.57.15",
