--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"framer-motion": "^11.5.4",
 		"graphql": "^16.9.0",
 		"i18next": "^23.15.1",
+		"i18next-browser-languagedetector": "^8.0.0",
 		"lefthook": "^1.7.15",
 		"lucide-react": "^0.417.0",
 		"luxon": "^3.5.0",
