--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"version": "0.0.0",
 	"scripts": {
+		"prebuild": "graphclient build",
 		"build": "rsbuild build",
 		"check": "biome check --write",
 		"dev": "bun run build:schema:dev && rsbuild dev --open",
