--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"luxon": "^3.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-ga4": "^2.1.0",
 		"react-i18next": "^15.0.2",
 		"react-ts-tradingview-widgets": "^1.2.5",
 		"tailwind-merge": "^2.5.2",
