--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"react-dom": "^18.3.1",
 		"react-ga4": "^2.1.0",
 		"react-i18next": "^15.0.2",
+		"react-responsive": "^10.0.0",
 		"react-ts-tradingview-widgets": "^1.2.5",
 		"tailwind-merge": "^2.5.3",
 		"tailwindcss": "^3.4.13",
